Fixed extra margin of shop items

--- a/app/assets/stylesheets/shop.css
+++ b/app/assets/stylesheets/shop.css
@@ -243,7 +243,6 @@ body.shop {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  margin-bottom: 10px;
 }
 
 .button {
